--- a/.github/workflows/build-lib-vlc.yml
+++ b/.github/workflows/build-lib-vlc.yml
@@ -76,15 +76,166 @@ jobs:
           
           echo "✅ 环境配置完成"
 
-      - name: Modify vlc source code with correct patterns
+      # 替换修改源代码的步骤
+      
+      - name: Modify vlc source code correctly
         run: |
           cd "${{ env.BUILD_DIR }}"
           
-          echo "=== 等待VLC源代码被获取 ==="
-          echo "注意：VLC源代码将在第一次构建时自动获取"
-          echo "我们将在构建后修改源代码"
+          echo "=== 正确修改VLC源代码 ==="
+          
+          # 等待VLC源代码被获取（第一次构建时会获取）
+          echo "等待VLC源代码..."
+          
+          # 如果还没有VLC源代码，先触发获取
+          if [ ! -d "libvlcjni/vlc" ]; then
+            echo "VLC源代码不存在，触发获取..."
+            # 运行简化的构建初始化
+            if [ -f "./buildsystem/compile.sh" ]; then
+              chmod +x ./buildsystem/compile.sh
+              # 只初始化不构建
+              ./buildsystem/compile.sh --init 2>&1 | tail -20 || echo "初始化完成"
+            fi
+          fi
+          
+          # 等待一段时间
+          sleep 10
+          
+          if [ ! -d "libvlcjni/vlc" ]; then
+            echo "手动克隆VLC源代码..."
+            mkdir -p libvlcjni
+            git clone --depth 1 https://code.videolan.org/videolan/vlc.git libvlcjni/vlc
+          fi
+          
+          VLC_SRC_DIR="libvlcjni/vlc"
+          echo "VLC源代码目录: $VLC_SRC_DIR"
+          
+          # 使用Python脚本进行稳健的修改
+          cat > modify_vlc.py << 'EOF'
+                                 #!/usr/bin/env python3
+                                 import os
+                                 import re
+                                 import sys
+                                 def modify_file(filepath, patterns):
+                                     """修改文件内容"""
+                                     if not os.path.exists(filepath):
+                                         print(f"文件不存在: {filepath}")
+                                         return False
+                                     with open(filepath, 'r', encoding='utf-8', errors='ignore') as f:
+                                         content = f.read()
+                                     original_content = content
+                                     
+                                     for pattern, replacement in patterns:
+                                         content = re.sub(pattern, replacement, content)
+                                     
+                                     if content != original_content:
+                                         with open(filepath, 'w', encoding='utf-8') as f:
+                                             f.write(content)
+                                         print(f"✅ 已修改: {filepath}")
+                                         return True
+                                     else:
+                                         print(f"⚠️  未修改: {filepath} (未找到匹配模式)")
+                                         return False
+                                 # 要修改的文件和模式
+                                 modifications = [
+                                     # core.c: 修改User-Agent字符串
+                                     (
+                                         r'lib/core\.c',
+                                         [
+                                             # 匹配: && (asprintf (&str, "%s LibVLC/"PACKAGE_VERSION, http) != -1))
+                                             # 替换: && (asprintf (&str, "%s abc_media_editor", http) != -1))
+                                             (r'\(asprintf\s*\(\s*&str\s*,\s*"%s\s+LibVLC/"PACKAGE_VERSION\s*,\s*http\s*\)\s*!=\s*-1\s*\)',
+                                              r'(asprintf (&str, "%s abc_media_editor", http) != -1)')
+                                         ]
+                                     ),
+                                     # libvlc.c: 第一处
+                                     (
+                                         r'src/libvlc\.c',
+                                         [
+                                             # 匹配: "VLC media player (LibVLC "VERSION")"
+                                             # 替换: "abc media editor"
+                                             (r'"VLC media player \(LibVLC "VERSION"\)"',
+                                              r'"abc media editor"')
+                                         ]
+                                     ),
+                                     # libvlc.c: 第二处
+                                     (
+                                         r'src/libvlc\.c',
+                                         [
+                                             # 匹配: "VLC/"PACKAGE_VERSION" LibVLC/"PACKAGE_VERSION
+                                             # 替换: "abc/abc_media_editor/"
+                                             (r'"VLC/"PACKAGE_VERSION"\s+LibVLC/"PACKAGE_VERSION',
+                                              r'"abc/abc_media_editor/"')
+                                         ]
+                                     ),
+                                     # live555.cpp
+                                     (
+                                         r'modules/access/live555\.cpp',
+                                         [
+                                             # 匹配: "LibVLC/" VERSION
+                                             # 替换: "abc_media_editor"
+                                             (r'"LibVLC/"\s+VERSION',
+                                              r'"abc_media_editor"')
+                                         ]
+                                     )
+                                 ]
+                                 vlc_dir = sys.argv[1] if len(sys.argv) > 1 else "."
+                                 for file_pattern, patterns in modifications:
+                                     # 查找文件
+                                     for root, dirs, files in os.walk(vlc_dir):
+                                         for file in files:
+                                             if re.search(file_pattern, os.path.join(root, file)):
+                                                 filepath = os.path.join(root, file)
+                                                 modify_file(filepath, patterns)
+                                                 break
+                                 print("✅ 修改完成")
+                                 EOF
+          # 执行Python脚本
+          python3 modify_vlc.py "$VLC_SRC_DIR"
+          # 验证修改
+          echo "=== 验证修改 ==="
+          # core.c 验证
+          CORE_FILE="$VLC_SRC_DIR/lib/core.c"
+          if [ -f "$CORE_FILE" ]; then
+            echo "检查 core.c:"
+            if grep -q '"%s abc_media_editor"' "$CORE_FILE"; then
+              echo "✅ core.c 修改成功"
+              # 显示修改的行
+              grep -n '"%s abc_media_editor"' "$CORE_FILE"
+            else
+              echo "❌ core.c 修改失败"
+              # 显示原始行
+              grep -n 'asprintf.*&str' "$CORE_FILE" | head -5
+            fi
+          fi
+          # libvlc.c 验证
+          LIBVLC_FILE="$VLC_SRC_DIR/src/libvlc.c"
+          if [ -f "$LIBVLC_FILE" ]; then
+            echo -e "\n检查 libvlc.c:"
+            if grep -q '"abc media editor"' "$LIBVLC_FILE"; then
+              echo "✅ 第一处修改成功"
+            else
+              echo "❌ 第一处修改失败"
+            fi
+            if grep -q '"abc/abc_media_editor/"' "$LIBVLC_FILE"; then
+              echo "✅ 第二处修改成功"
+            else
+              echo "❌ 第二处修改失败"
+            fi
+          fi
+          # live555.cpp 验证
+          LIVE555_FILE="$VLC_SRC_DIR/modules/access/live555.cpp"
+          if [ -f "$LIVE555_FILE" ]; then
+            echo -e "\n检查 live555.cpp:"
+            if grep -q '"abc_media_editor"' "$LIVE555_FILE"; then
+              echo "✅ 修改成功"
+            else
+              echo "❌ 修改失败"
+            fi
+          fi
+          echo "✅ VLC源代码修改完成"
 
-      # 为每个架构构建
+      # 修改arm64-v8a构建步骤，确保使用修改后的代码
       - name: Build libvlc for arm64-v8a
         run: |
           cd "${{ env.BUILD_DIR }}"
@@ -93,66 +244,12 @@ jobs:
           export ANDROID_SDK="$ANDROID_SDK_ROOT"
           export ANDROID_NDK="$ANDROID_NDK_ROOT"
           
-          # 首次构建，获取VLC源代码
-          time ./buildsystem/compile.sh -l -a arm64 --release -t 2>&1 | tee build_arm64.log
+          # 清理之前的构建缓存，确保使用修改后的代码
+          echo "清理构建缓存..."
+          rm -rf libvlcjni/vlc/build-android-aarch64-linux-android 2>/dev/null || true
           
-          # 构建完成后修改源代码
-          echo "构建完成，开始修改VLC源代码..."
-          
-          if [ -d "libvlcjni/vlc" ]; then
-            VLC_SRC_DIR="libvlcjni/vlc"
-            echo "找到VLC源代码目录: $VLC_SRC_DIR"
-            
-            # 1. 修改 /lib/core.c - 使用正确的替换模式
-            echo "1. 修改 /lib/core.c..."
-            CORE_FILE="$VLC_SRC_DIR/lib/core.c"
-            if [ -f "$CORE_FILE" ]; then
-              # 备份原文件
-              cp "$CORE_FILE" "${CORE_FILE}.backup"
-              # 使用正确的sed模式 - 只替换部分内容，保持格式正确
-              sed -i 's/LibVLC\/"PACKAGE_VERSION/abc_media_editor/' "$CORE_FILE"
-              echo "✅ /lib/core.c 修改完成"
-              
-              # 验证修改
-              echo "修改验证:"
-              grep -n "abc_media_editor" "$CORE_FILE" || echo "未找到修改"
-            fi
-            
-            # 2. 修改 /src/libvlc.c - 第一处
-            echo "2. 修改 /src/libvlc.c - 第一处..."
-            LIBVLC_FILE="$VLC_SRC_DIR/src/libvlc.c"
-            if [ -f "$LIBVLC_FILE" ]; then
-              cp "$LIBVLC_FILE" "${LIBVLC_FILE}.backup"
-              sed -i 's/"VLC media player (LibVLC "VERSION")"/"abc media editor"/' "$LIBVLC_FILE"
-              echo "✅ /src/libvlc.c 第一处修改完成"
-            fi
-            
-            # 3. 修改 /src/libvlc.c - 第二处
-            echo "3. 修改 /src/libvlc.c - 第二处..."
-            if [ -f "$LIBVLC_FILE" ]; then
-              # 注意：这里有两个连续的双引号，需要正确转义
-              sed -i 's/"VLC\/"PACKAGE_VERSION" LibVLC\/"PACKAGE_VERSION/"abc\/abc_media_editor\/"/' "$LIBVLC_FILE"
-              echo "✅ /src/libvlc.c 第二处修改完成"
-            fi
-            
-            # 4. 修改 /modules/access/live555.cpp
-            echo "4. 修改 /modules/access/live555.cpp..."
-            LIVE555_FILE="$VLC_SRC_DIR/modules/access/live555.cpp"
-            if [ -f "$LIVE555_FILE" ]; then
-              cp "$LIVE555_FILE" "${LIVE555_FILE}.backup"
-              sed -i 's/"LibVLC\/" VERSION/"abc_media_editor"/' "$LIVE555_FILE"
-              echo "✅ /modules/access/live555.cpp 修改完成"
-            fi
-            
-            # 最终验证
-            echo "=== 最终修改验证 ==="
-            for file in "$CORE_FILE" "$LIBVLC_FILE" "$LIVE555_FILE"; do
-              if [ -f "$file" ]; then
-                echo "文件: $(basename "$file")"
-                grep -n "abc_media_editor\|abc media editor" "$file" | head -2 || echo "  未找到修改"
-              fi
-            done
-          fi
+          # 使用-b参数跳过源码检查
+          time ./buildsystem/compile.sh -l -a arm64 --release -t -b 2>&1 | tee build_arm64.log
           
           # 检查构建结果
           if ls libvlcjni/libvlc/build/outputs/aar/*.aar 1> /dev/null 2>&1; then
@@ -177,73 +274,62 @@ jobs:
           echo "ANDROID_NDK=$ANDROID_SDK_ROOT/ndk/21.0.0" >> $GITHUB_ENV
           echo "NDK_ROOT=$ANDROID_SDK_ROOT/ndk/21.0.0" >> $GITHUB_ENV
 
+      # 修改armv7构建步骤
       - name: Build libvlc for armeabi-v7a
         run: |
           cd "${{ env.BUILD_DIR }}"
           echo "清理前一次构建的中间产物..."
+          
+          # 只清理aar文件，不清理源代码
           rm -rf libvlcjni/libvlc/build/outputs/aar/*.aar 2>/dev/null || true
-
+          # 清理armeabi-v7a的构建目录
+          rm -rf libvlcjni/vlc/build-android-arm-linux-androideabi 2>/dev/null || true
+      
           echo "检查当前 NDK 环境..."
           # 备份并移除可能冲突的 NDK
           if [ -d "$ANDROID_SDK_ROOT/ndk-bundle" ]; then
             echo "发现 ndk-bundle，可能引起冲突，重命名..."
             mv "$ANDROID_SDK_ROOT/ndk-bundle" "$ANDROID_SDK_ROOT/ndk-bundle.backup"
           fi
-
+      
           # 设置正确的环境变量
           export ANDROID_NDK="${{ env.ANDROID_NDK }}"
           export ANDROID_SDK="$ANDROID_SDK_ROOT"
           export ANDROID_NDK_ROOT="${{ env.ANDROID_NDK }}"
           export ANDROID_SDK_ROOT="$ANDROID_SDK_ROOT"
-    
-          # 打印环境变量用于调试
-          echo "=== 环境变量检查 ==="
-          echo "ANDROID_NDK: $ANDROID_NDK"
-          echo "ANDROID_SDK: $ANDROID_SDK"
-          echo "ANDROID_NDK_ROOT: $ANDROID_NDK_ROOT"
-          echo "ANDROID_SDK_ROOT: $ANDROID_SDK_ROOT"
-
-          # 验证使用的 NDK
-          echo "使用的 NDK 路径: $ANDROID_NDK"
-          $ANDROID_NDK/ndk-build --version | head -5
-
-          # 更新 local.properties
-          echo "sdk.dir=$ANDROID_SDK_ROOT" > local.properties
-          echo "ndk.dir=$ANDROID_NDK" >> local.properties
-
-          echo "开始构建 ARMv7 (armeabi-v7a) 架构..."
-          # 先检查脚本是否存在
-          if [ ! -f "./buildsystem/compile.sh" ]; then
-            echo "错误: compile.sh 脚本不存在！"
-            exit 1
-          fi
-    
-          # 给脚本添加执行权限
-          chmod +x ./buildsystem/compile.sh
-    
-          # 在构建前验证源代码修改
+          
+          # 构建前验证源代码
           echo "验证源代码修改..."
           if [ -d "libvlcjni/vlc" ]; then
             VLC_SRC_DIR="libvlcjni/vlc"
-            echo "检查VLC源代码修改:"
-            for file in "$VLC_SRC_DIR/lib/core.c" "$VLC_SRC_DIR/src/libvlc.c" "$VLC_SRC_DIR/modules/access/live555.cpp"; do
-              if [ -f "$file" ]; then
-                echo "文件: $(basename "$file")"
-                grep -n "abc_media_editor\|abc media editor" "$file" | head -1 || echo "  未找到修改"
-              fi
-            done
+            echo "检查core.c修改:"
+            if grep -q '"%s abc_media_editor"' "$VLC_SRC_DIR/lib/core.c"; then
+              echo "✅ core.c已正确修改"
+              # 显示修改的内容
+              grep -n '"%s abc_media_editor"' "$VLC_SRC_DIR/lib/core.c"
+            else
+              echo "❌ core.c未正确修改"
+              # 显示问题行
+              grep -n 'asprintf.*&str' "$VLC_SRC_DIR/lib/core.c" | head -5
+            fi
           fi
-    
+          
+          # 更新 local.properties
+          echo "sdk.dir=$ANDROID_SDK_ROOT" > local.properties
+          echo "ndk.dir=$ANDROID_NDK" >> local.properties
+      
+          echo "开始构建 ARMv7 (armeabi-v7a) 架构..."
+          
           # 使用-b参数跳过源码检查
           time ANDROID_NDK="$ANDROID_NDK" ANDROID_SDK="$ANDROID_SDK" \
               ./buildsystem/compile.sh -l -a arm --release -t -b 2>&1 | tee build_armv7.log
-
+      
           if ls libvlcjni/libvlc/build/outputs/aar/*.aar 1> /dev/null 2>&1; then
             echo "✅ ARMv7 AAR 构建成功！"
             cp libvlcjni/libvlc/build/outputs/aar/*.aar ../libvlc-armv7.aar
           else
             echo "❌ 未找到ARMv7 AAR文件。关键错误如下:"
-            grep -A 10 -B 5 -i "error\|failed\|ndk\|could not\|v21 needed" build_armv7.log | head -100
+            grep -A 5 -B 5 -i "error\|failed" build_armv7.log | head -100
             exit 1
           fi
 
