--- a/.github/workflows/build-apk-fantasytyx-bv.yml
+++ b/.github/workflows/build-apk-fantasytyx-bv.yml
@@ -238,7 +238,7 @@ jobs:
           rm -f "keystore.p12"
           echo "Keystore and build.json removed successfully."
 
-      - name: Install 7zip 
+      - name: Install 7zip
         run: sudo apt-get update && sudo apt-get install -y p7zip-full
 
       - name: Create aes256 encrypted archive with filename encryption
@@ -259,11 +259,10 @@ jobs:
             ./fantasybv-${{ env.BUILD_DATE }}.apk
 
       - name: Create github release & upload apk
-        working-directory: ./fantasy-bv-source/app/build/outputs/apk/default/release
         uses: softprops/action-gh-release@master
         with:
           tag_name: ${{env.BUILD_DATE}}-fantasybv
           files: |
-            ./fantasybv-${{ env.BUILD_DATE }}.7z
+            ./fantasy-bv-source/app/build/outputs/apk/default/release/fantasybv-${{ env.BUILD_DATE }}.7z
           draft: false
           prerelease: false
