--- a/.github/workflows/build-lib-vlc.yml
+++ b/.github/workflows/build-lib-vlc.yml
@@ -106,60 +106,6 @@ jobs:
           chmod +x $GITHUB_WORKSPACE/android-ci-source/scripts/customize-vlc.sh
           $GITHUB_WORKSPACE/android-ci-source/scripts/customize-vlc.sh
           
-          # if [ -d "libvlcjni/vlc" ]; then
-          #   VLC_SRC_DIR="libvlcjni/vlc"
-          #   echo "找到VLC源代码目录: $VLC_SRC_DIR"
-          #   
-          #   # 1. 修改 /lib/core.c - 使用正确的替换模式
-          #   echo "1. 修改 /lib/core.c..."
-          #   CORE_FILE="$VLC_SRC_DIR/lib/core.c"
-          #   if [ -f "$CORE_FILE" ]; then
-          #     # 备份原文件
-          #     # cp "$CORE_FILE" "${CORE_FILE}.backup"
-          #     # 使用正确的sed模式 - 只替换部分内容，保持格式正确
-          #     sed -i 's/asprintf (\&str, "%s LibVLC\/"PACKAGE_VERSION, http) != -1/asprintf (\&str, "%s abc_media_editor", http) != -1/' "$CORE_FILE"
-          #     echo "✅ /lib/core.c 修改完成"
-          #     
-          #     # 验证修改
-          #     echo "修改验证:"
-          #     grep -n "abc_media_editor" "$CORE_FILE" || echo "未找到修改"
-          #   fi
-          #   
-          #   # 2. 修改 /src/libvlc.c - 第一处
-          #   echo "2. 修改 /src/libvlc.c - 第一处..."
-          #   LIBVLC_FILE="$VLC_SRC_DIR/src/libvlc.c"
-          #   if [ -f "$LIBVLC_FILE" ]; then
-          #     # cp "$LIBVLC_FILE" "${LIBVLC_FILE}.backup"
-          #     sed -i 's/"VLC media player (LibVLC "VERSION")" );/"abc media editor" );/' "$LIBVLC_FILE"
-          #     echo "✅ /src/libvlc.c 第一处修改完成"
-          #   fi
-          #   
-          #   # 3. 修改 /src/libvlc.c - 第二处
-          #   echo "3. 修改 /src/libvlc.c - 第二处..."
-          #   if [ -f "$LIBVLC_FILE" ]; then
-          #     sed -i 's/"VLC\/"PACKAGE_VERSION" LibVLC\/"PACKAGE_VERSION );/"abc\/abc_media_editor\/");/' "$LIBVLC_FILE"
-          #     echo "✅ /src/libvlc.c 第二处修改完成"
-          #   fi
-          #   
-          #   # 4. 修改 /modules/access/live555.cpp
-          #   echo "4. 修改 /modules/access/live555.cpp..."
-          #   LIVE555_FILE="$VLC_SRC_DIR/modules/access/live555.cpp"
-          #   if [ -f "$LIVE555_FILE" ]; then
-          #     # cp "$LIVE555_FILE" "${LIVE555_FILE}.backup"
-          #     sed -i 's/"LibVLC\/" VERSION, i_http_port, p_sys );/"abc_media_editor", i_http_port, p_sys );/' "$LIVE555_FILE"
-          #     echo "✅ /modules/access/live555.cpp 修改完成"
-          #   fi
-          #   
-          #   # 最终验证
-          #   echo "=== 最终修改验证 ==="
-          #   for file in "$CORE_FILE" "$LIBVLC_FILE" "$LIVE555_FILE"; do
-          #     if [ -f "$file" ]; then
-          #       echo "文件: $(basename "$file")"
-          #       grep -n "abc_media_editor\|abc media editor" "$file" | head -2 || echo "  未找到修改"
-          #     fi
-          #   done
-          # fi
-          
           # 检查构建结果
           if ls libvlcjni/libvlc/build/outputs/aar/*.aar 1> /dev/null 2>&1; then
             echo "✅ ARM64 AAR 构建成功！"
@@ -315,6 +261,25 @@ jobs:
           draft: false
           prerelease: false
 
+      # 使用SSH Deploy Key的方式来实现对bv-libs的推送
+      # 生成ED25519密钥对（更安全，推荐）
+      # ssh-keygen -t ed25519 -C "github-actions@github.com" -f deploy_key
+      # 这将在当前目录生成私钥deploy_key和公钥deploy_key.pub
+      
+      # 将公钥添加到目标仓库的Deploy Keys:
+      # zxgv5/bv-libs → "Settings" → "Deploy keys" → "Add deploy key"
+      # 填写：
+      # Title: github-actions-decoder-lib-deploy
+      # Key: 粘贴 deploy_key.pub 内容
+      # 重要： 一定要勾选 "Allow write access"
+      # 然后点击 "Add key"
+      
+      # 将私钥添加到源仓库的Secrets：
+      # zxgv5/android-ci → "Settings" → "Secrets and variables" → "Actions" → "New repository secret"
+      # 填写：
+      # Name: BV_LIBS_DEPLOY_KEY
+      # Secret: 粘贴 deploy_key 文件的完整内容（包括 -----BEGIN OPENSSH PRIVATE KEY----- 和 -----END OPENSSH PRIVATE KEY-----）
+      # 点击 "Add secret"
       - name: Push vlc aar to bv-libs repository
         env:
           TARGET_REPO: "git@github.com:zxgv5/bv-libs.git"
