--- a/.github/workflows/build-lib-vlc.yml
+++ b/.github/workflows/build-lib-vlc.yml
@@ -316,7 +316,7 @@ jobs:
       #     rm -f ~/.ssh/config
 
       - name: Push aar to bv-libs repository
-        uses: ./.github/actions/push-aar-to-bv-libs/
+        uses: ./android-ci-source/.github/actions/push-aar-to-bv-libs/
         with:
           SOURCE_AAR: "${{ github.workspace }}/libvlc-release.aar"
           TARGET_NAME: "libvlc"
