--- a/.github/workflows/build-apk-fantasytyx-bv.yml
+++ b/.github/workflows/build-apk-fantasytyx-bv.yml
@@ -55,13 +55,14 @@ jobs:
         run: |
           # 1. 更新系统包索引
           sudo apt-get update -y
-          # 2. 安装系统自带python 3.12及依赖（含distutils）
-          sudo apt-get install -y python3.12 python3.12-dev python3.12-distutils
-          # 3. 配置python3命令指向最新版本（设置优先级）
+          # 2. 安装系统自带python 3.12及依赖（用通用distutils包替代版本化的distutils）
+          # 移除python3.12-distutils，改用python3-distutils（适配系统默认Python）
+          sudo apt-get install -y python3.12 python3.12-dev python3-distutils
+          # 3. 配置python3命令指向3.12版本（设置优先级）
           sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.12 100
-          # 4. 安装pip（确保最新python的pip可用）
-          curl -sS https://bootstrap.pypa.io/get-pip.py | python3.12
-          # 5. 验证python版本（输出应显示3.12+）
+          # 4. 安装pip（改用python内置ensurepip，避免get-pip.py的兼容性问题；同时升级pip）
+          python3.12 -m ensurepip --upgrade
+          # 5. 验证python与pip版本
           python3 --version
           pip3 --version
 
