--- a/.github/workflows/build-apk-fantasytyx-bv.yml
+++ b/.github/workflows/build-apk-fantasytyx-bv.yml
@@ -214,7 +214,7 @@ jobs:
           mv ./app/build/outputs/apk/default/release/*.apk ./app/build/outputs/apk/default/release/fantasybv-${{ env.BUILD_DATE }}.apk
  
       - name: Erase keystore, encrypt package and create release
-        uses: ./ci-source/.github/actions/erase-aes256pac-release/action.yml
+        uses: ./ci-source/.github/actions/erase-aes256pac-release/
         with:
           # 私钥文件路径（基于github.workspace的绝对路径）
           P12_KEYSTORE_PATH: "./fantasy-bv-source/keystore.p12"
