--- a/.github/workflows/build-apk-zipxtract.yml
+++ b/.github/workflows/build-apk-zipxtract.yml
@@ -47,6 +47,7 @@ jobs:
           echo "VERSION_NAME=$VERSION_NAME" >> $GITHUB_ENV
 
       - name: Setup keystore for signing
+        working-directory: ./zipxtract_source
         run: |
           cat > keystore.properties << EOF
           storeFile=${{ env.KEYSTORE_PATH }}
@@ -58,6 +59,7 @@ jobs:
           echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > ${{ env.KEYSTORE_PATH }}
 
       - name: Configure signing properties
+        working-directory: ./zipxtract_source
         run: |
           # Append signing configuration to gradle.properties
           cat >> gradle.properties << EOF
@@ -69,8 +71,10 @@ jobs:
           EOF
 
       - name: Build ps release
+        working-directory: ./zipxtract_source
         run: |
           echo "Building PS release..."
+          chmod +x ./gradlew
           ./gradlew assemblePsRelease
 
       - name: Find generated apks
