--- a/.github/workflows/build-apk-zipxtract.yml
+++ b/.github/workflows/build-apk-zipxtract.yml
@@ -22,8 +22,8 @@ jobs:
         uses: actions/checkout@main
         with:
           repository: WirelessAlien/ZipXtract
-          ref: master
-          # ref: v7.0
+          # ref: master
+          ref: v7.0
           path: zipxtract_source
           fetch-depth: 0
 
@@ -86,7 +86,7 @@ jobs:
           chmod +x ./gradlew
           ./gradlew assemblePsRelease
 
-      - name: Find generated apks
+      - name: Find release apks
         run: |
           echo "Looking for APK files..."
           PS_APK=$(find . -name "*ps*release*.apk" -type f | head -1)
@@ -94,12 +94,30 @@ jobs:
             echo "Found PS APK: $PS_APK"
             echo "ps_apk=$PS_APK" >> $GITHUB_OUTPUT
             echo "PS_APK_PATH=$PS_APK" >> $GITHUB_ENV
-            mv "$PS_APK" "$GITHUB_WORKSPACE/zipxtract_source/zipxtract-${{ env.BUILD_DATE }}.apk"
           fi
           # Count total APKs
           APK_COUNT=$(find . -name "*release*.apk" -type f | wc -l)
           echo "Total APK files found: $APK_COUNT"
           echo "APK_COUNT=$APK_COUNT" >> $GITHUB_ENV
+
+      - name: Sign the apk (pkcs12)
+        run: |
+          # 设置Android build-tools路径
+          export ANDROID_HOME=/usr/local/lib/android/sdk
+          export PATH="$ANDROID_HOME/build-tools/${{ env.ANDROID_BUILD_TOOLS }}:$PATH"
+          # 验证apksigner可用
+          which apksigner
+          apksigner --version
+          # 使用apksigner对APK签名
+          apksigner sign \
+            --ks "${{ env.KEYSTORE_PATH }}" \
+            --ks-pass "pass:${{ secrets.KEYSTORE_PASSWORD }}" \
+            --ks-key-alias "${{ secrets.KEY_ALIAS }}" \
+            --ks-type PKCS12 \
+            --out "$GITHUB_WORKSPACE/zipxtract_source/zipxtract-${{ env.BUILD_DATE }}.apk" \
+            ${{ env.PS_APK_PATH }}
+          # 验证签名
+          apksigner verify --verbose "$GITHUB_WORKSPACE/zipxtract_source/zipxtract-${{ env.BUILD_DATE }}.apk"
 
       - name: Erase keystore, encrypt package and create release
         uses: ./ci-source/.github/actions/erase-aes256pac-release/
