--- a/.github/workflows/build-apk-gh4a.yml
+++ b/.github/workflows/build-apk-gh4a.yml
@@ -109,5 +109,5 @@ jobs:
         with:
           P12_KEYSTORE_PATH: "${{ env.KEYSTORE_PATH }}"
           ZIP_AES256_PWD: ${{ secrets.ZIP_AES256_PWD }}
-          BUILD_ARTIFACT_PATH: "${{ env.RELEASE_APK }}"
+          BUILD_ARTIFACT_PATH: ${{ dirname(env.RELEASE_APK) }}/gh4a-${{ env.BUILD_DATE }}.apk"
           RELEASE_TAG_NAME: "${{ env.BUILD_DATE }}-gh4a"
